[workspace]

resolver = "2"

default-members = ["my-contract"]
members = ["model", "my-contract", "helper-contract", "integration-tests", "integration-utils", "integration-trait", "integration-trait-tests", "sandbox"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
num-format = "0.4.4"
itertools = "0.12.0"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.21.3"
sha256 = "1.3.0"
mutants = "0.0.3"
tokio = "1.28.2"

integration-trait = { path = "integration-trait" }
integration-utils = { path = "integration-utils" }
helper-contract = { path = "helper-contract" }

model = { path = "model" }

near-workspaces = "0.9.0"
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
