[workspace]

resolver = "2"

default-members = ["my-contract"]
members = ["model", "my-contract", "helper-contract", "integration-tests", "nitka", "nitka-proc", "nitka-proc-tests", "sandbox"]

[workspace.dependencies]
anyhow = "1.0.75"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
num-format = "0.4.4"
itertools = "0.12.0"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.22.0"
sha256 = "1.3.0"
mutants = "0.0.3"
tokio = "1.36"

nitka = { path = "nitka" }
nitka-proc = { path = "nitka-proc" }

helper-model = { path = "helper-contract" }

my-model = { path = "model" }

near-workspaces = "0.10.0"

near-sdk = "5.0.0"
near-contract-standards = "5.0.0"
