[workspace]

resolver = "2"

default-members = ["nitka"]
members = ["nitka", "nitka-proc"]

[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio = "1.37"
fake = "2.9"
base64 = "0.22"

near-workspaces = "0.10"
near-sdk = "5.1.0"
cfg-if = "1.0"

#nitka-proc = { path = "nitka-proc" }
nitka-proc = "0.5.0"
