[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
num-format = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
near-sdk = { workspace = true }
itertools = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
mutants = { workspace = true }

nitka = { workspace = true }
near-workspaces = { workspace = true }

my-model = { workspace = true, features = ["integration-test"] }
helper-model = { workspace = true, features = ["integration-test"] }

