[package]
name = "integration-trait-test-model"
version = "1.0.0"
authors = ["Sweat Economy"]
edition = "2021"

[lib]

[features]
default = ["integration-test"]
integration-test = []

[dependencies]
anyhow = "1.0.75"
near-sdk = "4.1.1"
async-trait = "0.1.74"
near-workspaces = { workspace = true }
integration-utils = { workspace = true }
integration-trait = { workspace = true }
