[package]
name = "integration-utils"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
async-trait = "0.1.74"
anyhow = "1.0.75"
dotenv = "0.15.0"
near-workspaces = "0.9"
near-units = "0.2"
futures = "0.3"
itertools = "0.11"
tokio = "1.28"
fake = "2.9"
near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
