[package]
name = "model"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "model"

[features]
default = []
integration-test = []

[dependencies]
anyhow = { workspace = true }
near-sdk = { workspace = true }
async-trait = { workspace = true }
integration-trait = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
integration-utils = { workspace = true }
