[package]
name = "my-model"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "my_model"

[features]
default = []
integration-test = ["dep:nitka", "dep:near-workspaces"]

[dependencies]
anyhow = { workspace = true }
near-sdk = { workspace = true }

nitka = { workspace = true, optional = true }
nitka-proc = { workspace = true }

near-workspaces = { workspace = true, optional = true }
