[package]
name = "integration-trait-test-model"
version = "1.0.0"
authors = ["Sweat Economy"]
edition = "2021"

[lib]

[features]
default = ["integration-test"]
integration-test = []

[dependencies]
anyhow = { workspace = true }
near-sdk = { workspace = true }
near-workspaces = { workspace = true }
nitka = { workspace = true }
nitka-proc = { workspace = true }
