[package]
name = "nitka-proc"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for NITKA - Near Integration Test Kit and Automation"
homepage = "https://github.com/sweatco/nitka"
repository = "https://github.com/sweatco/nitka"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.79"

