[package]
name = "nitka"
version = "0.3.0"
edition = "2021"
description = "NITKA - Near Integration Test Kit and Automation"
homepage = "https://github.com/sweatco/nitka"
repository = "https://github.com/sweatco/nitka"
license = "MIT OR Apache-2.0"


[lib]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
fake = { workspace = true }
base64 = { workspace = true }

near-workspaces = { workspace = true }
